--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
       // INSERT YOUR FIREBASE CONFIG OBJECT HERE
       const firebaseConfig = {
-        apiKey: "AIzaSyBJbEm6rMTObvILOS3lIhWjLqrF4J2aBIk",
-        authDomain: "auth-fa1b7.firebaseapp.com",
-        projectId: "auth-fa1b7",
-        storageBucket: "auth-fa1b7.appspot.com",
-        messagingSenderId: "270624695799",
-        appId: "1:270624695799:web:ebc7e61edf90ef855e7af2",
-      };
+  apiKey: "AIzaSyCLp8HSyekTCdgAjnjl9PtlHz_eoRx2xXc",
+  authDomain: "auth4-3a605.firebaseapp.com",
+  projectId: "auth4-3a605",
+  storageBucket: "auth4-3a605.appspot.com",
+  messagingSenderId: "392515148447",
+  appId: "1:392515148447:web:9c373e18966d45177f20aa"
+};
       const app = initializeApp(firebaseConfig);
       const auth = getAuth(app);
 
