--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 
       // INSERT YOUR FIREBASE CONFIG OBJECT HERE
       const firebaseConfig = {
-  apiKey: "AIzaSyCLp8HSyekTCdgAjnjl9PtlHz_eoRx2xXc",
-  authDomain: "auth4-3a605.firebaseapp.com",
-  projectId: "auth4-3a605",
-  storageBucket: "auth4-3a605.appspot.com",
-  messagingSenderId: "392515148447",
-  appId: "1:392515148447:web:9c373e18966d45177f20aa"
+  apiKey: "AIzaSyCZlGLWy8mk3c8oWBW9XDh1n--iwgq37Js",
+  authDomain: "auth10-c7790.firebaseapp.com",
+  projectId: "auth10-c7790",
+  storageBucket: "auth10-c7790.appspot.com",
+  messagingSenderId: "74411281718",
+  appId: "1:74411281718:web:f2bb3542f3c57ee8a0f797"
 };
       const app = initializeApp(firebaseConfig);
       const auth = getAuth(app);
